# surfaces

./: README.md
FauxloidMesh/: CMakeLists.txt  FoloidMesh.cxx
FauxloidRuled/: CMakeLists.txt  FoloidRuled.cxx  README
Figure8Torus/: CMakeLists.txt
FoloidMesh/: CMakeLists.txt  FoloidMesh.cxx
FoloidRuled/: CMakeLists.txt  FoloidRuled.cxx  README
Oloid/: CMakeLists.txt  Oloid-arc-param.ggb  Oloid.cxx
OloidMesh/: CMakeLists.txt  OloidMesh.cxx
OloidPoints/: CMakeLists.txt  OloidPoints.cxx
OloidPoints/doc/: OloidPoints.lyx  OloidPoints.lyx~  OloidPoints.tex
OloidRuled/: OloidRuled.cxx
OloidTri/: CMakeLists.txt  OloidTri.cxx
ParaKnot/: CMakeLists.txt
StripEx/: CMakeLists.txt  StripEx.cxx
TrefoilKnot/: CMakeLists.txt  main.cxx
doc/: OloidPoints.lyx
doc/Oloid/: Makefile  OloidPoints.lyx
rOloid/: CMakeLists.txt  rOloid.cxx  rOloid_supported.stl
